Done the Whole CRUD

--- a/angular.json
+++ b/angular.json
@@ -77,6 +77,17 @@
         },
         "test": {
           "builder": "@angular/build:unit-test"
+        },
+        "e2e": {
+          "builder": "playwright-ng-schematics:playwright",
+          "options": {
+            "devServerTarget": "crud-app:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "crud-app:serve:production"
+            }
+          }
         }
       }
     }
